# qa4sm-autoreports

./: .coveragerc  .gitignore  CHANGELOG.rst  CONTRIBUTING.rst  LICENSE.txt  README.md  README.rst  environment.yml  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: ci.yml  docs.yml
configs/smos_l2_v700/: create_report.py
configs/smos_l2_v700/report_config_templates/: smos_c3s.json  smos_era5land.json
configs/smos_l2_v700/report_latex_templates/src/: main.tex  run.tex
docs/: components.rst  conf.py  index.rst  quickstart.rst  readme.rst
src/qa4sm_apps/: data.py
src/qa4sm_apps/autoreports/: report.py  series.py  utils.py
src/qa4sm_autoreports/: __init__.py  data.py  extent.py  report.py  run.py  series.py  skeleton.py  utils.py
src/qa4sm_autoreports/old/: compile_report.py  trigger_runs.py
src/qa4sm_autoreports/pipelines/configs/smos_l2_v700/: series_settings.yml
src/qa4sm_autoreports/pipelines/configs/smos_l2_v700/report_config_templates/: smos_c3s.json  smos_era5land.json
tests/: conftest.py  test_content.py  test_extent.py  test_report.py  test_report_integration.py  test_run.py  test_series.py  test_skeleton.py  test_utils.py
tests/integration_tests/: main.tex  test_pipeline.py  tracking.tex
tests/latex_templates/: main.tex  references.bib  run.tex  something.tex
tests/old/test_pdf_report/: test_compile_pdf.py
tests/test_series/report_config_templates/: ismn_c3s.json
tests/testdata/test_series/epoch1/: ReportVars.yml  val_run_list.csv
tests/testdata/test_series/epoch1/run 1 - ismn_c3s/: 3f590a8f-2b2b-4195-99a6-13a59abf96d5.nc  ContentVars.yml  response-3f590a8f-2b2b-4195-99a6-13a59abf96d5.csv  summary_stats.csv
tests/testdata/test_series/epoch1/run1/: ContentVars.yml  config-test.qa4sm.eu.json  d9cf81c7-5c1c-4341-8a0c-4d6fcfb91677.nc  response-d9cf81c7-5c1c-4341-8a0c-4d6fcfb91677.csv
tests/testdata/test_series/epoch1/run1/latex/: summary_stats.csv
tests/testdata/test_series/epoch2/: ReportVars.yml  val_run_list.csv
tests/testdata/test_series/epoch2/run 1 - ismn_c3s/: 969af71f-319d-4692-af65-47c07c4ac18a.nc  ContentVars.yml  config-qa4sm.eu.json  response-969af71f-319d-4692-af65-47c07c4ac18a.csv
tests/testdata/test_series/epoch2/run1/: 46307296-0b96-4e23-9dcc-d0f2b15f96a2.nc  ContentVars.yml  response-46307296-0b96-4e23-9dcc-d0f2b15f96a2.csv  summary_stats.csv
tests/testdata/test_series/epoch2/tracking/: data_tracking_R.yml  data_tracking_ubRMSD.yml
(+4 files in other folders)
