[build-system]
# AVOID CHANGING REQUIRES: IT WILL BE UPDATED BY PYSCAFFOLD!
requires = ["setuptools>=46.1.0", "setuptools_scm[toml]>=5", "wheel", "packaging", "build", "twine"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
# For smarter version schemes and other configuration options,
# check out https://github.com/pypa/setuptools_scm
version_scheme = "no-guess-dev"

[project]
name = "qa4sm_autoreports"
description = "Automatic validation report generation with QA4SM"
readme = { file = "README.rst", content-type = "text/x-rst" }
license = { text = "MIT" }
authors = [
    { name = "TU Wien & AWST", email = "support@qa4sm.eu" },
    { name = "Wolfgang Preimesberger", email = "wolfgang.preimesberger@geo.tuwien.ac.at" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
    "License :: OSI Approved :: MIT License",
]
requires-python = ">=3.12"
dependencies = [
    "pandas",
    "numpy",
    "qa4sm-api>=0.2",
    "matplotlib",
    "cartopy",
    "xarray",
    "netCDF4",
    "PyQt5",
    "pyyaml",
    "pdflatex"
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/awst-austria/qa4sm-autoreports"
Documentation = "https://awst-austria.github.io/qa4sm-autoreports"

[project.optional-dependencies]
testing = [
    "pytest",
    "pytest-cov",
    "coverage",
]
docs = [
    "sphinx>=3.2.1",
    "sphinx_rtd_theme",
    "myst-parser>=0.18.1",
]

[project.scripts]
# qa4sm = "qa4sm_api.cli:cli"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["tests*"]

[tool.pytest.ini_options]
markers = [
    "integration: integration tests",
]
addopts = "--verbose --cov=qa4sm_autoreports --cov-report=term-missing -m 'not integration'"
norecursedirs = ["dist", "build", ".tox"]
testpaths = ["tests"]

# NOTE: flake8 does not natively support pyproject.toml.
# To use [tool.flake8] here, install the `flake8-pyproject` plugin.
# Alternatively, keep flake8 config in .flake8 or setup.cfg.
[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
exclude = [".tox", "build", "dist", ".eggs", "docs/conf.py"]

[tool.pyscaffold]
# PyScaffold's parameters when the project was created.
# This will be used when updating. Do not change!
version = "4.6"
package = "qa4sm_autoreports"
extensions = ["no_skeleton"]